--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="header content-section">
       <nav class="header__menu">
         <ul class="header__links-list">
-          
+          <li class="header__links-list-item header__links-list-item_no-bullit">
             <a class="header__link header__link_active text-link" href="#0">главная</a>
-          
+          </li>
           <li class="header__links-list-item text-link">
             <a class="header__link" href="#0">посмотреть лоты</a>
           </li>
