--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           
-            <a class="header__link header__link_active text-link" href="#0">главная</a>
+            <a class="header__link text-link">главная</a>
           
           <li class="header__links-list-item text-link">
             <a class="header__link" href="#0">посмотреть лоты</a>
